# skia

./: meson.build
src/codec/: meson.build
src/core/: meson.build
src/effects/: meson.build
src/effects/imagefilters/: meson.build
src/gpu/: meson.build
src/gpu/effects/: meson.build
src/gpu/geometry/: meson.build
src/gpu/gl/: meson.build
src/gpu/gl/builders/: meson.build
src/gpu/glsl/: meson.build
src/gpu/gradients/: meson.build
src/gpu/ops/: meson.build
src/gpu/text/: meson.build
src/image/: meson.build
src/images/: meson.build
src/lazy/: meson.build
src/opts/: meson.build
src/pathops/: meson.build
src/ports/: meson.build
src/shaders/: meson.build
src/shaders/gradients/: meson.build
src/sksl/: meson.build
src/sksl/ir/: meson.build
src/sksl/lex/: meson.build
src/utils/: meson.build
