source_file = [
	'SkAAClip.cpp',
	'SkATrace.cpp',
	'SkAlphaRuns.cpp',
	'SkAnalyticEdge.cpp',
	'SkAnnotation.cpp',
	'SkArenaAlloc.cpp',
	'SkAutoPixmapStorage.cpp',
	'SkBBHFactory.cpp',
	'SkBigPicture.cpp',
	'SkBitmap.cpp',
	'SkBitmapCache.cpp',
	'SkBitmapController.cpp',
	'SkBitmapDevice.cpp',
	'SkBitmapProcState.cpp',
	'SkBitmapProcState_matrixProcs.cpp',
	'SkBlendMode.cpp',
	'SkBlitRow_D32.cpp',
	'SkBlitter.cpp',
	'SkBlitter_A8.cpp',
	'SkBlitter_ARGB32.cpp',
	'SkBlitter_RGB565.cpp',
	'SkBlitter_Sprite.cpp',
	'SkBlurMF.cpp',
	'SkBlurMask.cpp',
	'SkBuffer.cpp',
	'SkCachedData.cpp',
	'SkCanvas.cpp',
	'SkCanvasPriv.cpp',
	'SkClipStack.cpp',
	'SkClipStackDevice.cpp',
	'SkColor.cpp',
	'SkColorFilter.cpp',
	'SkColorFilter_Matrix.cpp',
	'SkColorSpace.cpp',
	'SkColorSpaceXformSteps.cpp',
	'SkContourMeasure.cpp',
	'SkConvertPixels.cpp',
	'SkCpu.cpp',
	'SkCubicClipper.cpp',
	'SkCubicMap.cpp',
	'SkData.cpp',
	'SkDataTable.cpp',
	'SkDebug.cpp',
	'SkDeferredDisplayList.cpp',
	'SkDeferredDisplayListRecorder.cpp',
	'SkDeque.cpp',
	'SkDescriptor.cpp',
	'SkDevice.cpp',
	'SkDistanceFieldGen.cpp',
	'SkDocument.cpp',
	'SkDraw.cpp',
	'SkDrawLooper.cpp',
	'SkDrawShadowInfo.cpp',
	'SkDraw_atlas.cpp',
	'SkDraw_text.cpp',
	'SkDraw_vertices.cpp',
	'SkDrawable.cpp',
	'SkEdge.cpp',
	'SkEdgeBuilder.cpp',
	'SkEdgeClipper.cpp',
	'SkExecutor.cpp',
	'SkFlattenable.cpp',
	'SkFont.cpp',
	'SkFontDescriptor.cpp',
	'SkFontLCDConfig.cpp',
	'SkFontMgr.cpp',
	'SkFontStream.cpp',
	'SkForceCPlusPlusLinking.cpp',
	'SkGaussFilter.cpp',
	'SkGeometry.cpp',
	'SkGlobalInitialization_core.cpp',
	'SkGlyph.cpp',
	'SkGlyphBuffer.cpp',
	'SkGlyphRun.cpp',
	'SkGlyphRunPainter.cpp',
	'SkGpuBlurUtils.cpp',
	'SkGraphics.cpp',
	'SkHalf.cpp',
	'SkICC.cpp',
	'SkImageFilter.cpp',
	'SkImageFilterCache.cpp',
	'SkImageFilterTypes.cpp',
	'SkImageGenerator.cpp',
	'SkImageInfo.cpp',
	'SkLatticeIter.cpp',
	'SkLineClipper.cpp',
	'SkLocalMatrixImageFilter.cpp',
	'SkMD5.cpp',
	'SkMallocPixelRef.cpp',
	'SkMask.cpp',
	'SkMaskBlurFilter.cpp',
	'SkMaskCache.cpp',
	'SkMaskFilter.cpp',
	'SkMaskGamma.cpp',
	'SkMath.cpp',
	'SkMatrix.cpp',
	'SkMatrix44.cpp',
	'SkMatrixImageFilter.cpp',
	'SkMiniRecorder.cpp',
	'SkMipMap.cpp',
	'SkModeColorFilter.cpp',
	'SkMultiPictureDraw.cpp',
	'SkNormalFlatSource.cpp',
	'SkNormalMapSource.cpp',
	'SkNormalSource.cpp',
	'SkOpts.cpp',
	'SkOverdrawCanvas.cpp',
	'SkPaint.cpp',
	'SkPaintPriv.cpp',
	'SkPath.cpp',
	'SkPathEffect.cpp',
	'SkPathMeasure.cpp',
	'SkPathRef.cpp',
	'SkPath_serial.cpp',
	'SkPicture.cpp',
	'SkPictureData.cpp',
	'SkPictureFlat.cpp',
	'SkPictureImageGenerator.cpp',
	'SkPicturePlayback.cpp',
	'SkPictureRecord.cpp',
	'SkPictureRecorder.cpp',
	'SkPixelRef.cpp',
	'SkPixmap.cpp',
	'SkPoint.cpp',
	'SkPoint3.cpp',
	'SkPromiseImageTexture.cpp',
	'SkPtrRecorder.cpp',
	'SkQuadClipper.cpp',
	'SkRRect.cpp',
	'SkRTree.cpp',
	'SkRWBuffer.cpp',
	'SkRasterClip.cpp',
	'SkRasterPipeline.cpp',
	'SkRasterPipelineBlitter.cpp',
	'SkReadBuffer.cpp',
	'SkRecord.cpp',
	'SkRecordDraw.cpp',
	'SkRecordOpts.cpp',
	'SkRecordedDrawable.cpp',
	'SkRecorder.cpp',
	'SkRecords.cpp',
	'SkRect.cpp',
	'SkRegion.cpp',
	'SkRegion_path.cpp',
	'SkRemoteGlyphCache.cpp',
	'SkResourceCache.cpp',
	'SkScalar.cpp',
	'SkScalerContext.cpp',
	'SkScan.cpp',
	'SkScan_AAAPath.cpp',
	'SkScan_AntiPath.cpp',
	'SkScan_Antihair.cpp',
	'SkScan_Hairline.cpp',
	'SkScan_Path.cpp',
	'SkSemaphore.cpp',
	'SkSharedMutex.cpp',
	'SkSpecialImage.cpp',
	'SkSpecialSurface.cpp',
	'SkSpinlock.cpp',
	'SkSpriteBlitter_ARGB32.cpp',
	'SkSpriteBlitter_RGB565.cpp',
	'SkStream.cpp',
	'SkStrike.cpp',
	'SkStrikeCache.cpp',
	'SkStrikeForGPU.cpp',
	'SkStrikeSpec.cpp',
	'SkString.cpp',
	'SkStringUtils.cpp',
	'SkStroke.cpp',
	'SkStrokeRec.cpp',
	'SkStrokerPriv.cpp',
	'SkSurfaceCharacterization.cpp',
	'SkSwizzle.cpp',
	'SkTLS.cpp',
	'SkTSearch.cpp',
	'SkTaskGroup.cpp',
	'SkTextBlob.cpp',
	'SkTextBlobTrace.cpp',
	'SkThreadID.cpp',
	'SkTime.cpp',
	'SkTypeface.cpp',
	'SkTypefaceCache.cpp',
	'SkTypeface_remote.cpp',
	'SkUnPreMultiply.cpp',
	'SkUtils.cpp',
	'SkUtilsArm.cpp',
	'SkVM.cpp',
	'SkVMBlitter.cpp',
	'SkVertState.cpp',
	'SkVertices.cpp',
	'SkWriteBuffer.cpp',
	'SkWriter32.cpp',
	'SkXfermode.cpp',
	'SkXfermodeInterpretation.cpp',
	'SkYUVASizeInfo.cpp',
	'SkYUVMath.cpp',
	'SkYUVPlanesCache.cpp',
    ]

skcore_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file
                                 )