subdir('glsl')
subdir('text')
subdir('geometry')
subdir('ops')
subdir('effects')
subdir('gradients')
subdir('gl')


sk_gpu_internal_dep = [skgpu_glsl_dep , skgpu_text_dep, 
                       skgpu_geometry_dep, skgpu_ops_dep, 
                       skgpu_effects_dep, skgpu_gradients_dep, skgpu_gl_dep]

source_file = [
	'GrAHardwareBufferImageGenerator.cpp',
	'GrAHardwareBufferUtils.cpp',
	'GrAuditTrail.cpp',
	'GrBackendSurface.cpp',
	'GrBackendTextureImageGenerator.cpp',
	'GrBitmapTextureMaker.cpp',
	'GrBlurUtils.cpp',
	'GrBufferAllocPool.cpp',
	'GrCaps.cpp',
	'GrClientMappedBufferManager.cpp',
	'GrClipStackClip.cpp',
	'GrColorInfo.cpp',
	'GrColorSpaceXform.cpp',
	'GrContext.cpp',
	'GrContextPriv.cpp',
	'GrContextThreadSafeProxy.cpp',
	'GrContext_Base.cpp',
	'GrCopyRenderTask.cpp',
	'GrDDLContext.cpp',
	'GrDataUtils.cpp',
	'GrDefaultGeoProcFactory.cpp',
	'GrDistanceFieldGenFromVector.cpp',
	'GrDrawOpAtlas.cpp',
	'GrDrawOpTest.cpp',
	'GrDrawingManager.cpp',
	'GrDriverBugWorkarounds.cpp',
	'GrFixedClip.cpp',
	'GrFragmentProcessor.cpp',
	'GrGpu.cpp',
	'GrGpuBuffer.cpp',
	'GrGpuResource.cpp',
	'GrImageContext.cpp',
	'GrImageTextureMaker.cpp',
	'GrLegacyDirectContext.cpp',
	'GrMemoryPool.cpp',
	'GrOnFlushResourceProvider.cpp',
	'GrOpFlushState.cpp',
	'GrOpsRenderPass.cpp',
	'GrOpsTask.cpp',
	'GrPaint.cpp',
	'GrPathRenderer.cpp',
	'GrPathRendererChain.cpp',
	'GrPathRendering_none.cpp',
	'GrPipeline.cpp',
	'GrPrimitiveProcessor.cpp',
	'GrProcessor.cpp',
	'GrProcessorAnalysis.cpp',
	'GrProcessorSet.cpp',
	'GrProcessorUnitTest.cpp',
	'GrProGramDesc.cpp',
	'GrProGramInfo.cpp',
	'GrProxyProvider.cpp',
	'GrRecordingContext.cpp',
	'GrRectanizer_pow2.cpp',
	'GrRectanizer_skyline.cpp',
	'GrReducedClip.cpp',
	'GrRenderTarget.cpp',
	'GrRenderTargetContext.cpp',
	'GrRenderTargetProxy.cpp',
	'GrRenderTask.cpp',
	'GrResourceAllocator.cpp',
	'GrResourceCache.cpp',
	'GrResourceProvider.cpp',
	'GrSWMaskHelper.cpp',
	'GrSamplePatternDictionary.cpp',
	'GrShaderCaps.cpp',
	'GrShaderUtils.cpp',
	'GrShaderVar.cpp',
	'GrSoftwarePathRenderer.cpp',
	'GrStencilAttachment.cpp',
	'GrStencilSettings.cpp',
	'GrStyle.cpp',
	'GrSurface.cpp',
	'GrSurfaceContext.cpp',
	'GrSurfaceProxy.cpp',
	'GrSwizzle.cpp',
	'GrTessellator.cpp',
	'GrTestUtils.cpp',
	'GrTexture.cpp',
	'GrTextureAdjuster.cpp',
	'GrTextureContext.cpp',
	'GrTextureMaker.cpp',
	'GrTextureProducer.cpp',
	'GrTextureProxy.cpp',
	'GrTextureRenderTargetProxy.cpp',
	'GrTextureResolveRenderTask.cpp',
	'GrTransferFromRenderTask.cpp',
	'GrWaitRenderTask.cpp',
	'GrXferProcessor.cpp',
	'GrYUVProvider.cpp',
	'SkGpuDevice.cpp',
	'SkGpuDevice_drawTexture.cpp',
	'SkGr.cpp',
]

skia_nvpr_sources = [
	'GrPath.cpp',
	'GrPathProcessor.cpp',
    'GrPathRendering.cpp',
]

skgpu_dep = declare_dependency(
                               		include_directories : include_directories('.'),
                                    sources : source_file,
                                    dependencies : sk_gpu_internal_dep
                              )