source_file = [
	'SkImage.cpp',
	'SkImage_Gpu.cpp',
	'SkImage_GpuBase.cpp',
	'SkImage_GpuYUVA.cpp',
	'SkImage_Lazy.cpp',
	'SkImage_Raster.cpp',
	'SkSurface.cpp',
	'SkSurface_Gpu.cpp',
	'SkSurface_Raster.cpp',
	]

skimage_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )