source_file = [
	'SkImageEncoder.cpp',
	'SkJPEGWriteUtility.cpp',
	'SkJpegEncoder.cpp',
	'SkPngEncoder.cpp',
	'SkWebpEncoder.cpp',
	]

skimages_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )