source_file = [
	'SkOpts_avx.cpp',
	'SkOpts_crc32.cpp',
	'SkOpts_hsw.cpp',
	'SkOpts_sse41.cpp',
	'SkOpts_sse42.cpp',
	'SkOpts_ssse3.cpp',
	]

skopts_dep = declare_dependency(
	                                    include_directories : include_directories('.'),
	                                    sources : source_file,
                                 )
