source_file = [
	'SkAddIntersections.cpp',
	'SkDConicLineIntersection.cpp',
	'SkDCubicLineIntersection.cpp',
	'SkDCubicToQuads.cpp',
	'SkDLineIntersection.cpp',
	'SkDQuadLineIntersection.cpp',
	'SkIntersections.cpp',
	'SkOpAngle.cpp',
	'SkOpBuilder.cpp',
	'SkOpCoincidence.cpp',
	'SkOpContour.cpp',
	'SkOpCubicHull.cpp',
	'SkOpEdgeBuilder.cpp',
	'SkOpSegment.cpp',
	'SkOpSpan.cpp',
	'SkPathOpsAsWinding.cpp',
	'SkPathOpsCommon.cpp',
	'SkPathOpsConic.cpp',
	'SkPathOpsCubic.cpp',
	'SkPathOpsCurve.cpp',
	'SkPathOpsDebug.cpp',
	'SkPathOpsLine.cpp',
	'SkPathOpsOp.cpp',
	'SkPathOpsQuad.cpp',
	'SkPathOpsRect.cpp',
	'SkPathOpsSimplify.cpp',
	'SkPathOpsTSect.cpp',
	'SkPathOpsTightBounds.cpp',
	'SkPathOpsTypes.cpp',
	'SkPathOpsWinding.cpp',
	'SkPathWriter.cpp',
	'SkReduceOrder.cpp',
	]

skpathops_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                  )