source_file = [
	'Sk3D.cpp',
	'SkAnimCodecPlayer.cpp',
	'SkBase64.cpp',
	'SkCamera.cpp',
	'SkCanvasStack.cpp',
	'SkCanvasStateUtils.cpp',
	'SkCharToGlyphCache.cpp',
	'SkDashPath.cpp',
	'SkEventTracer.cpp',
	'SkFloatToDecimal.cpp',
	'SkFrontBufferedStream.cpp',
	'SkInterpolator.cpp',
	'SkJSON.cpp',
	'SkJSONWriter.cpp',
	'SkMatrix22.cpp',
	'SkMultiPictureDocument.cpp',
	'SkNWayCanvas.cpp',
	'SkNullCanvas.cpp',
	'SkOSPath.cpp',
	'SkPaintFilterCanvas.cpp',
	'SkParse.cpp',
	'SkParseColor.cpp',
	'SkParsePath.cpp',
	'SkPatchUtils.cpp',
	'SkPolyUtils.cpp',
	'SkShadowTessellator.cpp',
	'SkShadowUtils.cpp',
	'SkShaperJSONWriter.cpp',
	'SkTextUtils.cpp',
	'SkThreadUtils_pthread.cpp',
	'SkThreadUtils_win.cpp',
	'SkUTF.cpp',
	'SkWhitelistTypefaces.cpp',
]

skutils_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file
                                 )