source_file = [
	'SkAlphaThresholdFilter.cpp',
	'SkArithmeticImageFilter.cpp',
	'SkBlurImageFilter.cpp',
	'SkColorFilterImageFilter.cpp',
	'SkComposeImageFilter.cpp',
	'SkDisplacementMapEffect.cpp',
	'SkDropShadowImageFilter.cpp',
	'SkImageFilters.cpp',
	'SkImageSource.cpp',
	'SkLightingImageFilter.cpp',
	'SkMagnifierImageFilter.cpp',
	'SkMatrixConvolutionImageFilter.cpp',
	'SkMergeImageFilter.cpp',
	'SkMorphologyImageFilter.cpp',
	'SkOffsetImageFilter.cpp',
	'SkPaintImageFilter.cpp',
	'SkPictureImageFilter.cpp',
	'SkTileImageFilter.cpp',
	'SkXfermodeImageFilter.cpp',
	]

skeffects_imagefilters_dep = declare_dependency(
	                                    include_directories : include_directories('.'),
	                                    sources : source_file,
                                 )