source_file = [
	'GrPathUtils.cpp',
	'GrQuad.cpp',
	'GrQuadUtils.cpp',
	'GrShape.cpp',
	]

skgpu_geometry_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )

