source_file = [
	'GrGLSL.cpp',
	'GrGLSLBlend.cpp',
	'GrGLSLFragmentProcessor.cpp',
	'GrGLSLFragmentShaderBuilder.cpp',
	'GrGLSLGeometryProcessor.cpp',
	'GrGLSLPrimitiveProcessor.cpp',
	'GrGLSLProGramBuilder.cpp',
	'GrGLSLProGramDataManager.cpp',
	'GrGLSLShaderBuilder.cpp',
	'GrGLSLUtil.cpp',
	'GrGLSLVarying.cpp',
	'GrGLSLVertexGeoBuilder.cpp',
	'GrGLSLXferProcessor.cpp',
	]

skgpu_glsl_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )