source_file = [
	'GrAAConvexPathRenderer.cpp',
	'GrAAConvexTessellator.cpp',
	'GrAAHairLinePathRenderer.cpp',
	'GrAALinearizingConvexPathRenderer.cpp',
	'GrAtlasTextOp.cpp',
	'GrClearOp.cpp',
	'GrClearStencilClipOp.cpp',
	'GrDashLinePathRenderer.cpp',
	'GrDashOp.cpp',
	'GrDebugMarkerOp.cpp',
	'GrDefaultPathRenderer.cpp',
	'GrDrawAtlasOp.cpp',
	'GrDrawVerticesOp.cpp',
	'GrDrawableOp.cpp',
	'GrFillRRectOp.cpp',
	'GrFillRectOp.cpp',
	'GrLatticeOp.cpp',
	'GrMeshDrawOp.cpp',
	'GrOp.cpp',
	'GrOvalOpFactory.cpp',
	'GrQuadPerEdgeAA.cpp',
	'GrRegionOp.cpp',
	'GrShadowRRectOp.cpp',
	'GrSimpleMeshDrawOpHelper.cpp',
	'GrSmallPathRenderer.cpp',
	'GrStrokeRectOp.cpp',
	'GrTessellatingPathRenderer.cpp',
	'GrTextureOp.cpp',
	]

skia_nvpr_sources = [
	'GrDrawPathOp.cpp',
	'GrStencilAndCoverPathRenderer.cpp',
	'GrStencilPathOp.cpp',
]

skgpu_ops_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )