source_file = [
	'GrAtlasManager.cpp',
	'GrDistanceFieldAdjustTable.cpp',
	'GrSDFMaskFilter.cpp',
	'GrStrikeCache.cpp',
	'GrTextBlob.cpp',
	'GrTextBlobCache.cpp',
	'GrTextBlobVertexRegenerator.cpp',
	'GrTextContext.cpp',
	]

skgpu_text_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )
