source_file = [
	'Sk4fGradientBase.cpp',
	'Sk4fLinearGradient.cpp',
	'SkGradientShader.cpp',
	'SkLinearGradient.cpp',
	'SkRadialGradient.cpp',
	'SkSweepGradient.cpp',
	'SkTwoPointConicalGradient.cpp',
	]

skshader_gradient_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )