source_file = [
	'SkSLSetting.cpp',
	'SkSLSymbolTable.cpp',
	'SkSLType.cpp',
	'SkSLVariableReference.cpp',
	]

sksksl_ir_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                  )
