source_file = [
	'GrGLProgramBuilder.cpp',
	'GrGLShaderStringBuilder.cpp',
	]

skgpu_gl_builder_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file,
                                 )
